# Pheasant

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GenerateVisualStudioSolution.bat  Pheasant.sln  linux_make.sh  linux_run.sh
Pheasant/: CMakeLists.txt  Pheasant.vcxproj
Pheasant/src/: application.cpp  application.h  assert.h  common.h  defines.h  entry.h  pheasant.h  precompile.h  types.h
Pheasant/src/core/: application.cpp  application.h  core.h  entry.h  event.h  event.inl  input.h  log.cpp  log.h  log.inl  window.cpp  window.h
Pheasant/src/core/application/: application.cpp  application.h
Pheasant/src/core/event/: event.h  event.inl
Pheasant/src/core/filesystem/: filepath.cpp  filepath.h  filesystem.cpp  filesystem.h  filesystem.inl
Pheasant/src/core/input/: input.cpp  input.h
Pheasant/src/core/logger/: log.cpp  log.h  log.inl
Pheasant/src/core/math/: mat2.h  mat2.inl  mat3.h  mat3.inl  mat4.h  mat4.inl  mat_common.h  mat_common.inl  math.h  math_utils.h  quaternion.h  quaternion.inl  vec.h  vec.inl  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl  vec_common.h  vec_common.inl
Pheasant/src/core/render/: render_backend.h  render_backend.inl  render_frontend.cpp  render_frontend.h  render_shader_types.h  render_swapchain.h  render_types.h
Pheasant/src/core/render/opengl/: opengl_backend.cpp  opengl_backend.h  opengl_backend.inl  opengl_shader.cpp  opengl_shader.h  opengl_shader_man.cpp  opengl_shader_man.h  opengl_swapchain.cpp  opengl_swapchain.h  opengl_types.h
Pheasant/src/core/render/opengl/opengl_objects/: opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_buff.cpp  opengl_vertex_buff.h
Pheasant/src/core/simd/: simd.h
Pheasant/src/core/window/: window.cpp  window.h
Pheasant/tests/: CMakeLists.txt  test_math.cpp  test_utils.cpp  test_utils.h
Testbed/: CMakeLists.txt  Testbed.vcxproj
Testbed/src/: testbed.cpp
assets/shaders/: default_shader.frag.glsl  default_shader.vert.glsl
